examples/bad/string_index_oob.mko
fn main() {
    let s = "hi"
    print_int(int(s[99]))
}
